@@ -11,53 +11,73 @@ plugins {
 // Rename all artifacts
 tasks.withType<AbstractArchiveTask> {
   if (archiveBaseName.isPresent && archiveBaseName.get() == "client") {
-    archiveBaseName.set("SoulFireClient")
+    archiveBaseName.set("SoulFireCLI")
   }
 }
 
-val projectMainClass = "com.soulfiremc.launcher.SoulFireClientJava8Launcher"
+val projectMainClass = "com.soulfiremc.launcher.SoulFireCLIJava8Launcher"
 
-task("runSFClient", JavaExec::class) {
+task("runSFCLI", JavaExec::class) {
   group = "application"
   description = "Runs the SoulFire client"
 
   mainClass = projectMainClass
   classpath = sourceSets["main"].runtimeClasspath
 
-  jvmArgs = listOf(
+  val argsMutable = mutableListOf(
     "-Xmx2G",
     "-XX:+EnableDynamicAgentLoading",
     "-XX:+UnlockExperimentalVMOptions",
-    "-XX:+UseG1GC",
-    "-XX:G1NewSizePercent=20",
-    "-XX:G1ReservePercent=20",
-    "-XX:MaxGCPauseMillis=50",
-    "-XX:G1HeapRegionSize=32M"
+    "-XX:+UseZGC",
+    "-XX:+ZGenerational",
+    "-XX:+AlwaysActAsServerClassMachine",
+    "-XX:+UseNUMA",
+    "-XX:+UseFastUnorderedTimeStamps",
+    "-XX:+UseVectorCmov",
+    "-XX:+UseCriticalJavaThreadPriority",
+    "-Dsf.flags.v1=true"
   )
+
+  if (System.getProperty("idea.active") != null) {
+    argsMutable += "-Dnet.kyori.ansi.colorLevel=truecolor"
+  }
+
+  jvmArgs = argsMutable
 
   standardInput = System.`in`
 
   outputs.upToDateWhen { false }
 }
 
-task("runSFClientLocal", JavaExec::class) {
+task("printSFCliFlags", JavaExec::class) {
   group = "application"
   description = "Runs the SoulFire client"
 
   mainClass = projectMainClass
   classpath = sourceSets["main"].runtimeClasspath
+  args = listOf(
+    "--generate-flags"
+  )
 
-  jvmArgs = listOf(
+  val argsMutable = mutableListOf(
     "-Xmx2G",
     "-XX:+EnableDynamicAgentLoading",
     "-XX:+UnlockExperimentalVMOptions",
-    "-XX:+UseG1GC",
-    "-XX:G1NewSizePercent=20",
-    "-XX:G1ReservePercent=20",
-    "-XX:MaxGCPauseMillis=50",
-    "-XX:G1HeapRegionSize=32M",
-    "-Dsf.disableServerSelect=true"
+    "-XX:+UseZGC",
+    "-XX:+ZGenerational",
+    "-XX:+AlwaysActAsServerClassMachine",
+    "-XX:+UseNUMA",
+    "-XX:+UseFastUnorderedTimeStamps",
+    "-XX:+UseVectorCmov",
+    "-XX:+UseCriticalJavaThreadPriority",
+    "-Dsf.flags.v1=true"
   )
+
+  if (System.getProperty("idea.active") != null) {
+    argsMutable += "-Dnet.kyori.ansi.colorLevel=truecolor"
+  }
+
+  jvmArgs = argsMutable
 
   standardInput = System.`in`
 
@@ -65,9 +85,10 @@ task("runSFClientLocal", JavaExec::class) {
 }
 
 dependencies {
+  libs.bundles.bom.get().forEach { api(platform(it)) }
+
   implementation(projects.buildData)
   api(projects.proto)
-  api(projects.common)
   api(projects.server)
 
   // The java 8 launcher takes care of notifying the user if they are using an unsupported java version
@@ -76,22 +97,6 @@ dependencies {
   // For CLI support
   api(libs.picoli)
   annotationProcessor(libs.picoli.codegen)
-
-  // For GUI support
-  api(libs.bundles.flatlaf)
-  api(libs.xchart) {
-    exclude("org.junit.jupiter")
-  }
-  api(libs.miglayout.swing)
-  api(libs.commons.swing)
-
-  val lwjglVersion = "3.3.3"
-  val lwjglPlatforms = listOf("linux", "macos", "macos-arm64", "windows")
-  lwjglPlatforms.forEach { platform ->
-    api("org.lwjgl:lwjgl-nfd:$lwjglVersion:natives-$platform")
-    api("org.lwjgl:lwjgl:$lwjglVersion:natives-$platform")
-  }
-  api("org.lwjgl:lwjgl-nfd:$lwjglVersion")
 }
 
 fun Manifest.applySFAttributes() {
@@ -107,6 +112,21 @@ fun Manifest.applySFAttributes() {
 }
 
 tasks {
+  val generateDependencyList = register("generateDependencyList") {
+    dependsOn(configurations.runtimeClasspath)
+    inputs.files(configurations.runtimeClasspath)
+
+    val outputFile = layout.buildDirectory.file("dependency-list.txt")
+    outputs.file(outputFile)
+
+    doLast {
+      val dependencies = configurations.runtimeClasspath.get().files
+        .filter { it.name.endsWith("jar") }
+        .filter { !it.toString().contains("build" + File.separator + "libs") }
+        .joinToString("\n") { it.name }
+      outputFile.get().asFile.writeText(dependencies)
+    }
+  }
   jar {
     archiveClassifier = "unshaded"
 
@@ -115,7 +135,7 @@ tasks {
     from({
       configurations.runtimeClasspath.get()
         .filter { it.name.endsWith("jar") }
-        .filter { it.toString().contains("build/libs") }
+        .filter { it.toString().contains("build" + File.separator + "libs") }
         .map { zipTree(it) }
     })
 
@@ -132,9 +152,12 @@ tasks {
     from({
       configurations.runtimeClasspath.get()
         .filter { it.name.endsWith("jar") }
-        .filter { !it.toString().contains("build/libs") }
+        .filter { !it.toString().contains("build" + File.separator + "libs") }
     }) {
       into("META-INF/lib")
+    }
+    from(generateDependencyList.get().outputs.files) {
+      into("META-INF")
     }
   }
   build {
