@@ -24,16 +24,25 @@ task("runSFDedicated", JavaExec::class) {
   mainClass = projectMainClass
   classpath = sourceSets["main"].runtimeClasspath
 
-  jvmArgs = listOf(
+  val argsMutable = mutableListOf(
     "-Xmx2G",
     "-XX:+EnableDynamicAgentLoading",
     "-XX:+UnlockExperimentalVMOptions",
-    "-XX:+UseG1GC",
-    "-XX:G1NewSizePercent=20",
-    "-XX:G1ReservePercent=20",
-    "-XX:MaxGCPauseMillis=50",
-    "-XX:G1HeapRegionSize=32M"
+    "-XX:+UseZGC",
+    "-XX:+ZGenerational",
+    "-XX:+AlwaysActAsServerClassMachine",
+    "-XX:+UseNUMA",
+    "-XX:+UseFastUnorderedTimeStamps",
+    "-XX:+UseVectorCmov",
+    "-XX:+UseCriticalJavaThreadPriority",
+    "-Dsf.flags.v1=true"
   )
+
+  if (System.getProperty("idea.active") != null) {
+    argsMutable += "-Dnet.kyori.ansi.colorLevel=truecolor"
+  }
+
+  jvmArgs = argsMutable
 
   standardInput = System.`in`
 
@@ -45,9 +54,10 @@ task("runSFDedicated", JavaExec::class) {
 }
 
 dependencies {
+  libs.bundles.bom.get().forEach { api(platform(it)) }
+
   implementation(projects.buildData)
   api(projects.proto)
-  api(projects.common)
   api(projects.server)
 
   // The java 8 launcher takes care of notifying the user if they are using an unsupported java version
@@ -67,6 +77,21 @@ fun Manifest.applySFAttributes() {
 }
 
 tasks {
+  val generateDependencyList = register("generateDependencyList") {
+    dependsOn(configurations.runtimeClasspath)
+    inputs.files(configurations.runtimeClasspath)
+
+    val outputFile = layout.buildDirectory.file("dependency-list.txt")
+    outputs.file(outputFile)
+
+    doLast {
+      val dependencies = configurations.runtimeClasspath.get().files
+        .filter { it.name.endsWith("jar") }
+        .filter { !it.toString().contains("build" + File.separator + "libs") }
+        .joinToString("\n") { it.name }
+      outputFile.get().asFile.writeText(dependencies)
+    }
+  }
   jar {
     archiveClassifier = "unshaded"
 
@@ -75,7 +100,7 @@ tasks {
     from({
       configurations.runtimeClasspath.get()
         .filter { it.name.endsWith("jar") }
-        .filter { it.toString().contains("build/libs") }
+        .filter { it.toString().contains("build" + File.separator + "libs") }
         .map { zipTree(it) }
     })
 
@@ -92,9 +117,12 @@ tasks {
     from({
       configurations.runtimeClasspath.get()
         .filter { it.name.endsWith("jar") }
-        .filter { !it.toString().contains("build/libs") }
+        .filter { !it.toString().contains("build" + File.separator + "libs") }
     }) {
       into("META-INF/lib")
+    }
+    from(generateDependencyList.get().outputs.files) {
+      into("META-INF")
     }
   }
   build {
